<resources>
    <string name="app_name">Enzii</string>
    <string name="enter_name">Enter Name</string>
    <string name="button">Button</string>
    <string name="enter">Enter</string>
    <string name="todo">TODO</string>
    <string name="logo">logo</string>
    <string name="register">Register</string>
    <string name="textview">TextView</string>
    <string name="magazine_button">magazine button</string>
    <string name="news_papers">news papers</string>
    <string name="search_news">Search News</string>
    <string name="todo1">TODO1</string>
    <string name="search_button">search button</string>
    <string name="news_image">news image</string>
    <string name="shadow">shadow</string>
    <string name="author">author</string>
    <string name="title">Title</string>
    <string name="source">Source</string>
    <string name="headlines">Headlines</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="_01_january_1991">01 January 1990</string>
    <string name="desc">Desc</string>
    <string name="time">Time</string>
    <string name="image1">image1</string>
    <string name="author1">Author</string>
    <string name="splashnew">splashNew</string>
    <string name="hello_world">Hello world</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="sighn_out">SIGHN OUT</string>
    <string name="facebook_application_id" translatable="false">2222772907805026</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb2222772907805026</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="news_for_you">News for you</string>
    <string name="subtitle">Subtitle</string>
    <string name="title_of_news">Title of News</string>
    <string name="a_time_ago">a time ago</string>
    <string name="_01_january_1990">01 January 1990</string>
    <string name="iagedesc">iagedesc</string>
    <string name="todo4">TODO1</string>
    <string name="todo2">TODO2</string>
    <string name="todo3">TODO3</string>
</resources>
